--- a/meta-align/configs/UDA_OH_DANN.yaml
+++ b/meta-align/configs/UDA_OH_DANN.yaml
@@ -1,29 +1,30 @@
 TRAINER: 'DANN'
 
 TASK:
-  NAME: 'UDA'
+  NAME: 'MSDA'
 
 MODEL:
   PRETRAIN: True
-  BASENET: 'resnet50'
+  BASENET: 'resnet101'
   DNET: 'Discriminator'
   D_INDIM: 1024
   D_OUTDIM: 1
 
 DATASET:
-  NAME: 'office_home'
-  ROOT: 'office_home'
+  NAME: 'domainnet'
+  ROOT: 'data/domainnet'
+  TRIM: 2000
 
 METHOD:
   W_ALG: 0.1
   ENT: False
 
 TRAIN:
-  BATCH_SIZE_SOURCE: 36
-  BATCH_SIZE_TARGET: 36
+  BATCH_SIZE_SOURCE: 80
+  BATCH_SIZE_TARGET: 16
   LR: 0.001
-  TTL_ITE: 8000
-  TEST_FREQ: 500
+  TTL_ITE: 50000
+  TEST_FREQ: 2000
   PRINT_FREQ: 50
-  SAVE_FREQ: 5000
-  OUTPUT_ROOT: 'exp'
+  SAVE_FREQ: 10000
+  OUTPUT_ROOT: 'uda_oh_dann'
